# sample-functions/ApiKeyProtected/handler.go
@@ -4,15 +4,21 @@ import (
 	"fmt"
 	"io/ioutil"
 	"log"
-	"net/http"
 	"os"
-
-	"github.com/openfaas/faas/watchdog/types"
+	"strings"
 )
 
-func handle(header http.Header, body []byte) {
-	key := header.Get("X-Api-Key")
-	if key == os.Getenv("secret_api_key") {
+func handle(body []byte) {
+	key := os.Getenv("Http_X_Api_Key")
+
+	secretBytes, err := ioutil.ReadFile("/run/secrets/secret_api_key")
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	secret := strings.TrimSpace(string(secretBytes))
+
+	if key == secret {
 		fmt.Println("Unlocked the function!")
 	} else {
 		fmt.Println("Access denied!")
@@ -21,9 +27,5 @@ func handle(header http.Header, body []byte) {
 
 func main() {
 	bytes, _ := ioutil.ReadAll(os.Stdin)
-	req, err := types.UnmarshalRequest(bytes)
-	if err != nil {
-		log.Fatal(err)
-	}
-	handle(req.Header, req.Body.Raw)
+	handle(bytes)
 }
